links now open in a new tab

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Helvetica;
 }
 
 .App-logo {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: steelblue;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +36,100 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: center;
+  background-color: #ec7404;
+  height: 4vh;
+  color: white;
+}
+
+.item {
+  margin-left: 20px;
+  font-size: 33px;
+  padding-top: 8px;
+}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: #0d14cc;
+}
+
+.logo {
+  max-width: 4vh;
+  margin-top: -8px;
+}
+
+.projectPic {
+  width: 30h;
+  height: 40vh;
+  margin: 0 auto 2vh auto;
+}
+
+h2 {
+  color: #828282;
+  max-width: 33%;
+  border-bottom: 5px solid #ec7404;
+  margin: 0 auto 2vh auto;
+}
+
+p {
+  max-width: 33%;
+  text-align: center;
+  margin: 0 auto 1vh auto;
+  font-size: 18px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background: grey;
+}
+
+.footer h2 {
+  color: white;
+  margin: -25px auto 5px auto;
+}
+
+.centered {
+  margin-left:  auto;
+  margin-right: auto;
+  text-align: left;
+  width: 15em;
+  white-space: nowrap;
+
+}
+
+ul {
+  list-style-position: inside;
+  list-style-type: none;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.year {
+  color: #9a9a9a;
+}
+
+.edu {
+  margin: 0 auto;
+}
+
+.skills {
+  width: 8em;
+  
 }
