--- a/src/App.css
+++ b/src/App.css
@@ -41,15 +41,22 @@
 .nav-menu {
   display: flex;
   justify-content: center;
-  background-color: #ec7404;
-  height: 50px;
+  background-color: black;
+  height: 80px;
   color: white;
+  width: 100%;
+  white-space: nowrap;
 }
 
 .item {
   margin-left: 20px;
   font-size: 33px;
-  padding-top: 8px;
+  height: 50px;
+  margin-top: 20px;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:link {
@@ -61,7 +68,7 @@ a:visited {
 }
 
 a:hover {
-  color: #0d14cc;
+  color: rgb(221, 219, 219);
 }
 
 .logo {
@@ -70,15 +77,14 @@ a:hover {
 }
 
 .projectPic {
-  width: 30h;
-  height: 40vh;
+  height: 300px;
   margin: 0 auto 2vh auto;
 }
 
 h2 {
-  color: #828282;
+  color: #272c33;
   max-width: 33%;
-  border-bottom: 5px solid #ec7404;
+  border-bottom: 5px solid #3f4652;
   margin: 0 auto 2vh auto;
 }
 
@@ -90,7 +96,7 @@ p {
 }
 
 .footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 20px;
@@ -130,10 +136,8 @@ ul {
 }
 
 .skills {
-  width: 8em;
-  padding-bottom: 20vh;
-}
-
-.end {
-  padding-bottom: 20vh;
+  display: inline-block;
+  text-align: left;
+  margin: 0 auto;
+  padding-left: 24px;
 }
