--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,57 @@ article {
 
 #hamburger-menu {
   display: none;
+  background-color: black;
+  height: 80px;
+  color: white;
+  width: 100%;
+  white-space: nowrap;
+}
+
+
+.hamburger-items li {
+  list-style: none;
+  margin-left: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+
+.h-container {
+  padding-top: 18px;
+}
+
+#nav-icon1 span {
+  display: block;
+  margin: 8px 8px 0 8px;
+  height: 4px;
+  width: 45px;
+  background: white;
+  border-radius: 9px;
+  cursor:pointer; 
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-menu1:checked ~ #nav-icon1 span:nth-child(1){
+  -webkit-transform: rotate(135deg) translate(19px,-13px);
+  -moz-transform: rotate(135deg) translate(19px,-13px);
+  -o-transform: rotate(135deg) translate(19px,-13px);
+  transform: rotate(135deg) translate(19px,-13px);
+}
+#nav-menu1:checked ~ #nav-icon1 span:nth-child(2){
+   opacity: 0;
+}
+#nav-menu1:checked ~ #nav-icon1 span:nth-child(3){
+  -webkit-transform: rotate(-135deg) translate(3px);
+  -moz-transform: rotate(-135deg) translate(3px);
+  -o-transform: rotate(-135deg) translate(3px);
+  transform: rotate(-135deg) translate(3px);
+}
+
+input[type="checkbox"]{
+  display:none;
 }
 
  /* Mobile Rendering below 750px */
@@ -164,7 +215,7 @@ article {
   }
 
   #hamburger-menu {
-    display: inline;
+    display: block;
   }
  }
 
